--- a/.github/workflows/Build&Test.yml
+++ b/.github/workflows/Build&Test.yml
@@ -27,8 +27,21 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+        
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package -DskipTests --file pom.xml
+      
+    - name: Run Tests
+      run: mvn -B -Dmaven.test.failure.ignore=true test
+      
+    - name: Test Report
+      uses: dorny/test-reporter@v1
+      if: success() || failure()
+      with:
+        name: JUnit Tests
+        path: target/surefire-reports/*.xml
+        reporter: java-junit
+        fail-on-error: false
 
     - name: Checkstyle for Java
       uses: dbelyaev/action-checkstyle@v0.6.1
